unpackaged/main/default/objects/User_Extension__c/User_Extension__c.object-meta.xml
<CustomObject>
    <label>User Extension</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Extensions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>