unpackaged/main/default/objects/User_Extension__c/fields/Current_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User Role</label>
    <referenceTo>ROE_Rule__c</referenceTo>
    <relationshipLabel>User Extensions (Current User Role)</relationshipLabel>
    <relationshipName>User_Extensions1</relationshipName>
    <type>Lookup</type>
</CustomField>