unpackaged/main/default/objects/User_Extension__c/fields/Department_Current__c.field-meta.xml
<CustomField>
    <fullName>Department_Current__c</fullName>
    <formula>TEXT(User__r.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (Current)</label>
    <type>Text</type>
</CustomField>