unpackaged/main/default/objects/User_Extension__c/fields/Department_New__c.field-meta.xml
<CustomField>
    <fullName>Department_New__c</fullName>
    <formula>TEXT(New_User_Role__r.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (New)</label>
    <type>Text</type>
</CustomField>