unpackaged/main/default/objects/User_Extension__c/fields/Is_TBH__c.field-meta.xml
<CustomField>
    <fullName>Is_TBH__c</fullName>
    <formula>NOT(ISPICKVAL(TBH_Index__c,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is TBH?</label>
    <type>Checkbox</type>
</CustomField>