unpackaged/main/default/objects/User_Extension__c/fields/Level_Current__c.field-meta.xml
<CustomField>
    <fullName>Level_Current__c</fullName>
    <formula>TEXT(User__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level (Current)</label>
    <type>Text</type>
</CustomField>