unpackaged/main/default/objects/User_Extension__c/fields/Level_New__c.field-meta.xml
<CustomField>
    <fullName>Level_New__c</fullName>
    <formula>TEXT(New_User_Role__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level (New)</label>
    <type>Text</type>
</CustomField>