unpackaged/main/default/objects/User_Extension__c/fields/Needs_Sync_To_User__c.field-meta.xml
<CustomField>
    <fullName>Needs_Sync_To_User__c</fullName>
    <formula>NOT(ISBLANK(User__c)) &amp;&amp;
CASESAFEID(User__r.UserRoleId) &lt;&gt; Current_User_Role__r.User_Role_ID__c
&amp;&amp; User__r.Is_integration_user__c = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Sync To User?</label>
    <type>Checkbox</type>
</CustomField>