unpackaged/main/default/objects/User_Extension__c/fields/New_User_Notification__c.field-meta.xml
<CustomField>
    <fullName>New_User_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New User Notification</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>User Extensions</relationshipLabel>
    <relationshipName>User_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>