unpackaged/main/default/objects/User_Extension__c/fields/New_User_Role__c.field-meta.xml
<CustomField>
    <fullName>New_User_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New User Role</label>
    <referenceTo>ROE_Rule__c</referenceTo>
    <relationshipLabel>User Extensions</relationshipLabel>
    <relationshipName>User_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>