unpackaged/main/default/objects/User_Extension__c/fields/Notify_of_New_User__c.field-meta.xml
<CustomField>
    <fullName>Notify_of_New_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify of New User?</label>
    <type>Checkbox</type>
</CustomField>