unpackaged/main/default/objects/User_Extension__c/fields/Num_AE_BDR_Pairings__c.field-meta.xml
<CustomField>
    <fullName>Num_AE_BDR_Pairings__c</fullName>
    <label># AE:BDR Pairings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>