unpackaged/main/default/objects/User_Extension__c/fields/Num_Hold_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Num_Hold_Accounts__c</fullName>
    <label># Hold Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>