unpackaged/main/default/objects/User_Extension__c/fields/Num_Owned_Committed_Prospects__c.field-meta.xml
<CustomField>
    <fullName>Num_Owned_Committed_Prospects__c</fullName>
    <label># Owned Committed Prospects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>