unpackaged/main/default/objects/User_Extension__c/fields/Num_Pilot_Deals__c.field-meta.xml
<CustomField>
    <fullName>Num_Pilot_Deals__c</fullName>
    <label># Pilot Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>