unpackaged/main/default/objects/User_Extension__c/fields/Num_Pre_Assigned_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Num_Pre_Assigned_Accounts__c</fullName>
    <label># Pre-Assigned Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>