unpackaged/main/default/objects/User_Extension__c/fields/Open_New_Commitment_Expected_New_AR__c.field-meta.xml
<CustomField>
    <fullName>Open_New_Commitment_Expected_New_AR__c</fullName>
    <label>Open New Commitment Expected New AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>