unpackaged/main/default/objects/User_Extension__c/fields/Open_Non_Subscription_Expected_NRR__c.field-meta.xml
<CustomField>
    <fullName>Open_Non_Subscription_Expected_NRR__c</fullName>
    <label>Open Non-Subscription Expected NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>