unpackaged/main/default/objects/User_Extension__c/fields/Open_Pilot_NRR__c.field-meta.xml
<CustomField>
    <fullName>Open_Pilot_NRR__c</fullName>
    <label>Open Pilot NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>