unpackaged/main/default/objects/User_Extension__c/fields/Region_Current__c.field-meta.xml
<CustomField>
    <fullName>Region_Current__c</fullName>
    <formula>TEXT(User__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region (Current)</label>
    <type>Text</type>
</CustomField>