unpackaged/main/default/objects/User_Extension__c/fields/Role_Name_Current__c.field-meta.xml
<CustomField>
    <fullName>Role_Name_Current__c</fullName>
    <formula>User__r.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Name (Current)</label>
    <type>Text</type>
</CustomField>