unpackaged/main/default/objects/User_Extension__c/fields/Role_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Role_Name_New__c</fullName>
    <formula>New_User_Role__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Name (New)</label>
    <type>Text</type>
</CustomField>