unpackaged/main/default/objects/User_Extension__c/fields/Segment_New__c.field-meta.xml
<CustomField>
    <fullName>Segment_New__c</fullName>
    <formula>TEXT(New_User_Role__r.Opportunity_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment (New)</label>
    <type>Text</type>
</CustomField>