unpackaged/main/default/objects/User_Extension__c/fields/Subteam_Current__c.field-meta.xml
<CustomField>
    <fullName>Subteam_Current__c</fullName>
    <formula>TEXT(User__r.Subteam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subteam (Current)</label>
    <type>Text</type>
</CustomField>