unpackaged/main/default/objects/User_Extension__c/fields/Subteam_New__c.field-meta.xml
<CustomField>
    <fullName>Subteam_New__c</fullName>
    <formula>TEXT(New_User_Role__r.Subteam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subteam (New)</label>
    <type>Text</type>
</CustomField>