unpackaged/main/default/objects/User_Extension__c/fields/TBH_Req_ID__c.field-meta.xml
<CustomField>
    <fullName>TBH_Req_ID__c</fullName>
    <label>TBH Req ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>