unpackaged/main/default/objects/User_Extension__c/fields/Team_Current__c.field-meta.xml
<CustomField>
    <fullName>Team_Current__c</fullName>
    <formula>TEXT(User__r.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team (Current)</label>
    <type>Text</type>
</CustomField>