unpackaged/main/default/objects/User_Extension__c/fields/Terminated_User_Notification__c.field-meta.xml
<CustomField>
    <fullName>Terminated_User_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminated User Notification</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>User Extensions (Terminated User Notification)</relationshipLabel>
    <relationshipName>User_Extensions1</relationshipName>
    <type>Lookup</type>
</CustomField>