unpackaged/main/default/objects/User_Extension__c/fields/Territory_Current__c.field-meta.xml
<CustomField>
    <fullName>Territory_Current__c</fullName>
    <formula>TEXT(User__r.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory (Current)</label>
    <type>Text</type>
</CustomField>