unpackaged/main/default/objects/User_Extension__c/fields/Territory_New__c.field-meta.xml
<CustomField>
    <fullName>Territory_New__c</fullName>
    <formula>TEXT(New_User_Role__r.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory (New)</label>
    <type>Text</type>
</CustomField>