unpackaged/main/default/objects/User_Extension__c/fields/Transition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transition_Notes__c</fullName>
    <label>Transition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>