unpackaged/main/default/objects/User_Extension__c/fields/Trigger_Match_New_to_Current__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Match_New_to_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger: Match New to Current</label>
    <type>Checkbox</type>
</CustomField>