unpackaged/main/default/objects/User_Extension__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>IF(ISBLANK(User__c),TBH_Name__c,User__r.FirstName&amp;&quot; &quot;&amp;User__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>