unpackaged/main/default/objects/User_Extension__c/validationRules/TBH_requires_new_role.validationRule-meta.xml
<ValidationRule>
    <fullName>TBH_requires_new_role</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(New_User_Role__c) &amp;&amp; NOT(ISPICKVAL(TBH_Index__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>New_User_Role__c</errorDisplayField>
    <errorMessage>TBH requires a defined new user role</errorMessage>
</ValidationRule>