unpackaged/main/default/objects/User_Extension__c/validationRules/Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Name</fullName>
    <active>true</active>
    <errorConditionFormula>VLOOKUP($ObjectType.User_Extension__c.Fields.Name,$ObjectType.User_Extension__c.Fields.Name,Name)=Name &amp;&amp; (ISNEW() || ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>User ROE record already exists</errorMessage>
</ValidationRule>